fix overflow bug

--- a/css/selvmade.css
+++ b/css/selvmade.css
@@ -70,7 +70,7 @@ p, .contact, .biography {
     color: #ff4000;
   }
   body {
-    overflow: hidden;
+    overflow: auto;
     margin-left: auto;
     margin-right: auto;
   }
